added processing min js file

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
   	<script src="assets/js/custom.js"></script>
 
     <!-- Processing JavaScript -->
-    <script src="js/processing.min.js"></script>
+    <script src="assets/js/processing.min.js"></script>
 
 
     <script>
