Added resume page and updated index text

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <div class="navbar-collapse collapse navbar-right">
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">HOME</a></li>
+            <li><a href="resume.html">RESUME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="contact.html">CONTACT</a></li>
             <li class="dropdown">
@@ -70,10 +71,10 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-					<h3>Show your work with this beautiful theme</h3>
-					<h1>Eyecatching Bootstrap 3 Theme.</h1>
-					<h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h5>
-					<h5>More Lorem Ipsum added here too.</h5>
+					<h3>Computer Science as an Art</h3>
+					<h1>Alex Marion</h1>
+					<h5>Drexel University, 2017</h5>
+					<h5>Computer Science Major, Math Minor</h5>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 himg">
 					<!-- <img src="assets/img/browser.png" class="img-responsive"> -->
