--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Contact</title>
+    <title>SOLID - Bootstrap 3 Theme</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -42,14 +42,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Alex Marion</a>
+          <a class="navbar-brand" href="index.html">SOLID.</a>
         </div>
         <div class="navbar-collapse collapse navbar-right">
           <ul class="nav navbar-nav">
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
-            <li class="active"><a href="contact.html">CONTACT</a></li>
-            <li class="dropdown">
+            <li><a href="contact.html">CONTACT</a></li>
+            <li class="dropdown active">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="blog.html">BLOG</a></li>
@@ -63,70 +63,50 @@
       </div>
     </div>
 
+
 	<!-- *****************************************************************************************************************
 	 BLUE WRAP
 	 ***************************************************************************************************************** -->
 	<div id="blue">
 	    <div class="container">
 			<div class="row">
-				<h3>Contact.</h3>
+				<h3>Single Project.</h3>
 			</div><!-- /row -->
 	    </div> <!-- /container -->
 	</div><!-- /blue -->
 
 	<!-- *****************************************************************************************************************
-	 CONTACT WRAP
+	 TITLE & CONTENT
 	 ***************************************************************************************************************** -->
 
-	 <div id="contactwrap"></div>
-
-	<!-- *****************************************************************************************************************
-	 CONTACT FORMS
-	 ***************************************************************************************************************** -->
-
-	 <div class="container mtb">
+	 <div class="container mt">
 	 	<div class="row">
-	 		<div class="col-lg-8">
-	 			<h4>Just Get In Touch!</h4>
-	 			<div class="hline"></div>
-		 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-		 			<form role="form">
-					  <div class="form-group">
-					    <label for="InputName1">Your Name</label>
-					    <input type="email" class="form-control" id="exampleInputEmail1">
-					  </div>
-					  <div class="form-group">
-					    <label for="InputEmail1">Email address</label>
-					    <input type="email" class="form-control" id="exampleInputEmail1">
-					  </div>
-					  <div class="form-group">
-					    <label for="InputSubject1">Subject</label>
-					    <input type="email" class="form-control" id="exampleInputEmail1">
-					  </div>
-					  <div class="form-group">
-					  	<label for="message1">Message</label>
-					  	<textarea class="form-control" id="message1" rows="3"></textarea>
-					  </div>
-					  <button type="submit" class="btn btn-theme">Submit</button>
-					</form>
-			</div><! --/col-lg-8 -->
+		 	<div class="col-lg-5 col-lg-offset-1">
+			 	<div class="spacing"></div>
+		 		<h4>YOUR PROJECT NAME</h4>
+		 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+		 		<h4>Our Proposal</h4>
+		 		<p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+		 	</div>
 
-	 		<div class="col-lg-4">
-		 		<h4>Our Address</h4>
+		 	<div class="col-lg-4 col-lg-offset-1">
+			 	<div class="spacing"></div>
+		 		<h4>Project Details</h4>
 		 		<div class="hline"></div>
-		 			<p>
-		 				Some Ave, 987,<br/>
-		 				23890, New York,<br/>
-		 				United States.<br/>
-		 			</p>
-		 			<p>
-		 				Email: alexmarion@drexel.edu<br/>
-		 				Tel: (410) 830-0770
-		 			</p>
-		 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-	 		</div>
+		 		<p><b>Date:</b> April 18, 2014</p>
+		 		<p><b>Author:</b> Marcel Newman</p>
+		 		<p><b>Categories:</b> Illustration, Web Design, Wordpress</p>
+		 		<p><b>Tagged:</b> Flat, UI, Development</p>
+		 		<p><b>Client:</b> Wonder Corp.</p>
+		 		<p><b>Website:</b> <a href="http://blacktie.co">http://blacktie.co</a></p>
+		 	</div>
+
 	 	</div><! --/row -->
 	 </div><! --/container -->
+
+	<!-- *****************************************************************************************************************
+	 PORTFOLIO SECTION
+	 ***************************************************************************************************************** -->
 
 
 	<!-- *****************************************************************************************************************
@@ -178,5 +158,87 @@
   	<script src="assets/js/custom.js"></script>
 
 
+    <script>
+// Portfolio
+(function($) {
+	"use strict";
+	var $container = $('.portfolio'),
+		$items = $container.find('.portfolio-item'),
+		portfolioLayout = 'fitRows';
+
+		if( $container.hasClass('portfolio-centered') ) {
+			portfolioLayout = 'masonry';
+		}
+
+		$container.isotope({
+			filter: '*',
+			animationEngine: 'best-available',
+			layoutMode: portfolioLayout,
+			animationOptions: {
+			duration: 750,
+			easing: 'linear',
+			queue: false
+		},
+		masonry: {
+		}
+		}, refreshWaypoints());
+
+		function refreshWaypoints() {
+			setTimeout(function() {
+			}, 1000);
+		}
+
+		$('nav.portfolio-filter ul a').on('click', function() {
+				var selector = $(this).attr('data-filter');
+				$container.isotope({ filter: selector }, refreshWaypoints());
+				$('nav.portfolio-filter ul a').removeClass('active');
+				$(this).addClass('active');
+				return false;
+		});
+
+		function getColumnNumber() {
+			var winWidth = $(window).width(),
+			columnNumber = 1;
+
+			if (winWidth > 1200) {
+				columnNumber = 5;
+			} else if (winWidth > 950) {
+				columnNumber = 4;
+			} else if (winWidth > 600) {
+				columnNumber = 3;
+			} else if (winWidth > 400) {
+				columnNumber = 2;
+			} else if (winWidth > 250) {
+				columnNumber = 1;
+			}
+				return columnNumber;
+			}
+
+			function setColumns() {
+				var winWidth = $(window).width(),
+				columnNumber = getColumnNumber(),
+				itemWidth = Math.floor(winWidth / columnNumber);
+
+				$container.find('.portfolio-item').each(function() {
+					$(this).css( {
+					width : itemWidth + 'px'
+				});
+			});
+		}
+
+		function setPortfolio() {
+			setColumns();
+			$container.isotope('reLayout');
+		}
+
+		$container.imagesLoaded(function () {
+			setPortfolio();
+		});
+
+		$(window).on('resize', function () {
+		setPortfolio();
+	});
+})(jQuery);
+</script>
   </body>
 </html>
